[gd_scene load_steps=19 format=2]

[ext_resource path="res://gui/screens/register/scripts/RegisterScreen.gd" type="Script" id=1]
[ext_resource path="res://gui/screens/register/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/screens/register/assets/GUI.png" type="Texture" id=3]
[ext_resource path="res://music/xDeviruchi - Take some rest and eat some food!.wav" type="AudioStream" id=4]
[ext_resource path="res://gui/screens/main_screen/assets/1.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/main_screen/assets/2.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/main_screen/assets/4.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/main_screen/assets/3.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=10]
size = 31
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 98, 46, 13 )
modulate_color = Color( 0.0313726, 0.666667, 0.054902, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 98, 46, 13 )
modulate_color = Color( 0.698039, 0.701961, 1, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 81, 46, 14 )

[node name="RegisterScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -155.0
margin_right = 135.0
margin_bottom = 155.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 100, 100 )
alignment = 1

[node name="titleLbl" type="Label" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 281.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 10 )
text = "Registering
"
align = 1
valign = 1

[node name="UsernameLbl" type="Label" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 281.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 11 )
text = "Username"

[node name="Username" type="LineEdit" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 281.0
margin_bottom = 121.0
focus_neighbour_top = NodePath("../BackBtn")
focus_neighbour_bottom = NodePath("../Password")
focus_next = NodePath("../Password")
focus_previous = NodePath("../BackBtn")

[node name="PassLbl" type="Label" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 281.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 11 )
text = "Password"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 281.0
margin_bottom = 167.0
focus_neighbour_top = NodePath("../Username")
focus_neighbour_bottom = NodePath("../Confirm")
focus_next = NodePath("../Confirm")
focus_previous = NodePath("../Username")
secret = true
expand_to_text_length = true

[node name="ConfirmLbl" type="Label" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 281.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 11 )
text = "Confirm"

[node name="Confirm" type="LineEdit" parent="VBoxContainer"]
margin_top = 189.0
margin_right = 281.0
margin_bottom = 213.0
focus_neighbour_top = NodePath("../Password")
focus_neighbour_bottom = NodePath("../RegisterBtn")
focus_next = NodePath("../RegisterBtn")
focus_previous = NodePath("../Password")
secret = true
expand_to_text_length = true

[node name="RegisterBtn" type="Button" parent="VBoxContainer"]
modulate = Color( 0.121569, 0.984314, 0, 1 )
margin_top = 217.0
margin_right = 281.0
margin_bottom = 247.0
focus_neighbour_top = NodePath("../Confirm")
focus_neighbour_bottom = NodePath("../BackBtn")
focus_next = NodePath("../BackBtn")
focus_previous = NodePath("../Confirm")
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 2 )
text = "REGISTER NOW"

[node name="BackBtn" type="Button" parent="VBoxContainer"]
margin_top = 251.0
margin_right = 281.0
margin_bottom = 281.0
focus_neighbour_top = NodePath("../RegisterBtn")
focus_neighbour_bottom = NodePath("../Username")
focus_next = NodePath("../Username")
focus_previous = NodePath("../RegisterBtn")
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
shortcut_in_tooltip = false
text = "Back"
icon_align = 2

[node name="NotificationLbl" type="Label" parent="VBoxContainer"]
margin_top = 285.0
margin_right = 281.0
margin_bottom = 299.0
clip_text = true

[node name="Sprite" type="Sprite" parent="VBoxContainer"]
position = Vector2( -55, -58 )
scale = Vector2( 8.88636, 9.75 )
z_index = -1
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 34, 44, 44 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 5 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -5.00003, -7.00003 )
scale = Vector2( 3.34549, 3.33642 )
texture = ExtResource( 6 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 8 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 7 )
centered = false

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="VBoxContainer/RegisterBtn" to="." method="_on_RegisterBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
